Arrumando view dos pedidos

--- a/ecommerce/appsettings.json
+++ b/ecommerce/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;database=dbEcommerce;user=root;Pwd=12345678;"
+    "DefaultConnection": "Server=localhost;database=dbEcommerce;user=root;Pwd=19092015*!!*;"
   }
 }
